# gRPC-haskell

./: .gitignore  .travis.yml  LICENSE  README.md  benchmarks.html  default-tests.nix  default.nix  fetch-nixpkgs.nix  flake.nix  fourmolu.yaml  grpc-haskell.cabal  grpc-haskell.nix  nixpkgs.json  nixpkgs.nix  release.nix  shell.nix  stack-20.26.yaml  stack.yaml
.github/workflows/: ci.yml
bench/: Bench.hs
cbits/: grpc_haskell.c
core/: default.nix  grpc-haskell-core.cabal  shell.nix
core/cbits/: grpc_haskell.c
core/include/: grpc_haskell.h
core/src/Network/GRPC/: LowLevel.hs  Unsafe.chs
core/src/Network/GRPC/LowLevel/: Call.hs  Client.hs  CompletionQueue.hs  GRPC.hs  Op.hs  Server.hs
core/src/Network/GRPC/LowLevel/Call/: Unregistered.hs
core/src/Network/GRPC/LowLevel/Client/: Unregistered.hs
core/src/Network/GRPC/LowLevel/CompletionQueue/: Internal.hs  Unregistered.hs
core/src/Network/GRPC/LowLevel/GRPC/: MetadataMap.hs
core/src/Network/GRPC/LowLevel/Server/: Unregistered.hs
core/src/Network/GRPC/Unsafe/: ChannelArgs.chs  Metadata.chs  Op.chs  Security.chs
core/tests/: LowLevelTests.hs  Properties.hs  UnsafeTests.hs
core/tests/LowLevelTests/: Op.hs
examples/echo/: echo.proto
examples/echo/echo-client/: Main.hs
examples/echo/echo-cpp/: Makefile  echo-client  echo-client.cc  echo-server  echo-server.cc  echo.grpc.pb.cc  echo.grpc.pb.h  echo.pb.cc  echo.pb.h
examples/echo/echo-hs/: Echo.hs  EchoClient.hs  EchoServer.hs
examples/echo/echo-python/: echo_client.py
examples/echo/echo-server/: Main.hs
examples/hellos/hellos-client/: Main.hs
examples/hellos/hellos-cpp/: hellos_client.cc  hellos_server.cc
examples/hellos/hellos-server/: Main.hs
examples/tutorial/: Arithmetic.hs  ArithmeticClient.hs  ArithmeticServer.hs  TUTORIAL.md
include/: grpc_haskell.h
lowlevel/: grpc-haskell-lowlevel.cabal
lowlevel/src/Network/GRPC/LowLevel/: CompletionQueue.hs
nix/: QuickCheck.nix  base-compat-batteries.nix  data-diverse.nix  data-diverse.patch  dhall.nix  grpc.nix  optparse-generic.nix  parameterized.patch  proto3-suite.nix  proto3-suite.patch  proto3-wire.nix  proto3-wire.patch  protobuf-wire.nix  quickcheck-instances.nix  record-dot-preprocessor.nix  swagger2.nix  word-compat.nix
nix/grpc-pin/: grpc.nix  grpcio-status.nix  grpcio-tools.nix
nix/overlays/: haskell.nix
src/Network/: GRPC.chs
src/Network/GRPC/: Constants.hsc  Core.chs  HighLevel.hs  LowLevel.hs  Time.chs  Unsafe.chs
src/Network/GRPC/Core/: Constants.hsc  Time.chs
src/Network/GRPC/HighLevel/: Client.hs  Generated.hs  Server.hs
src/Network/GRPC/HighLevel/Server/: Unregistered.hs
src/Network/GRPC/LowLevel/: Call.hs  Client.hs  CompletionQueue.hs  GRPC.hs  Op.hs  Server.hs
src/Network/GRPC/LowLevel/Call/: Unregistered.hs
src/Network/GRPC/LowLevel/Client/: Unregistered.hs
src/Network/GRPC/LowLevel/CompletionQueue/: Internal.hs  Unregistered.hs
src/Network/GRPC/LowLevel/Op/: Unregistered.hs
src/Network/GRPC/LowLevel/Server/: Unregistered.hs
src/Network/GRPC/Unsafe/: ByteBuffer.chs  ChannelArgs.chs  Constants.hsc  Metadata.chs  Op.chs  Security.chs  Slice.chs  Time.chs
tests/: GeneratedTests.hs  LowLevelTests.hs  Properties.hs  TestClient.hs  TestServer.hs  UnsafeTests.hs  protoc.sh  simple-client.sh  simple-server.sh  test-client.py  test-client.sh  test-server.py  test-server.sh  tests.patch
tests/LowLevelTests/: Op.hs
tests/ssl/: localhost.crt  localhost.key
tests/tmp/: Main.hi  Simple.hi  Simple.hs
tools/compile-proto-file/: Main.hs
