name:                grpc-haskell
version:             0.0.1.0
synopsis:            Haskell implementation of gRPC layered on shared C library.
homepage:            https://github.com/awakenetworks/gRPC-haskell
license:             Apache-2.0
license-file:        LICENSE
author:              Awake Networks
maintainer:          opensource@awakenetworks.com
copyright:           Copyright 2016 Awake Networks
category:            Network
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  tests/*.hs
                     tests/*.proto
                     tests/*.py
                     tests/*.sh

Flag Debug
  Description: Adds debug logging.
  Manual:      True
  Default:     False

flag with-examples
  description: Also build example executables.
  manual:      True
  default:     False

library
  build-depends:
      base >=4.8 && <5.0
    , bytestring ==0.10.*
    , proto3-suite >=0.4.0.0
    , proto3-wire
    , grpc-haskell-core

    , async >=2.1 && <2.3
    , managed >= 1.0.5

  exposed-modules:
    Network.GRPC.HighLevel
    Network.GRPC.HighLevel.Generated
    Network.GRPC.HighLevel.Server
    Network.GRPC.HighLevel.Server.Unregistered
    Network.GRPC.HighLevel.Client
  default-language:     Haskell2010
  ghc-options:          -Wall -fwarn-incomplete-patterns -fno-warn-unused-do-bind
  hs-source-dirs:       src
  default-extensions:   CPP
  CC-Options: -std=c99
  if flag(debug)
    CPP-Options: -DDEBUG
    CC-Options:  -DGRPC_HASKELL_DEBUG -std=c99

executable hellos-server
  if flag(with-examples)
    build-depends:
      base >=4.8 && <5.0
      , async
      , bytestring == 0.10.*
      , containers >=0.5 && <0.7
      , grpc-haskell
      , grpc-haskell-core
      , proto3-suite
      , proto3-wire
      , text
      , transformers
  else
    buildable: False
  default-language: Haskell2010
  ghc-options:      -Wall -g -threaded -rtsopts -with-rtsopts=-N -O2
  hs-source-dirs:   examples/hellos/hellos-server
  main-is:          Main.hs

executable hellos-client
  if flag(with-examples)
    build-depends:
      base >=4.8 && <5.0
      , async
      , bytestring == 0.10.*
      , containers >=0.5 && <0.7
      , grpc-haskell
      , grpc-haskell-core
      , proto3-suite
      , proto3-wire
      , text
      , transformers
  else
    buildable: False
  default-language: Haskell2010
  ghc-options:      -Wall -g -threaded -rtsopts -with-rtsopts=-N -O2
  hs-source-dirs:   examples/hellos/hellos-client
  main-is:          Main.hs

executable echo-server
  if flag(with-examples)
    build-depends:
      base >=4.8 && <5.0
      , async
      , bytestring == 0.10.*
      , containers >=0.5 && <0.7
      , grpc-haskell
      , grpc-haskell-core
      , optparse-generic
      , proto3-suite
      , proto3-wire
      , text
      , vector
    other-modules:
      Echo
  else
    buildable: False
  default-language: Haskell2010
  ghc-options:      -Wall -g -threaded -rtsopts -with-rtsopts=-N -O2
  hs-source-dirs:   examples/echo/echo-hs
  main-is:          EchoServer.hs


executable arithmetic-server
  if flag(with-examples)
    build-depends:
      base >=4.8 && <5.0
      , async
      , bytestring == 0.10.*
      , containers >=0.5 && <0.7
      , grpc-haskell
      , grpc-haskell-core
      , optparse-generic
      , proto3-suite
      , proto3-wire
      , text
      , vector
    other-modules:
      Arithmetic
  else
    buildable: False
  default-language: Haskell2010
  ghc-options:      -Wall -g -threaded -rtsopts -with-rtsopts=-N -O2
  hs-source-dirs:   examples/tutorial/
  main-is:          ArithmeticServer.hs

executable arithmetic-client
  if flag(with-examples)
    build-depends:
      base >=4.8 && <5.0
      , async
      , bytestring == 0.10.*
      , containers >=0.5 && <0.7
      , grpc-haskell
      , grpc-haskell-core
      , optparse-generic
      , proto3-suite
      , proto3-wire
      , text
      , vector
    other-modules:
      Arithmetic
  else
    buildable: False
  default-language: Haskell2010
  ghc-options:      -Wall -g -threaded -rtsopts -with-rtsopts=-N -O2
  hs-source-dirs:   examples/tutorial/
  main-is:          ArithmeticClient.hs

executable echo-client
  if flag(with-examples)
    build-depends:
      base >=4.8 && <5.0
      , async
      , bytestring == 0.10.*
      , containers >=0.5 && <0.7
      , grpc-haskell
      , grpc-haskell-core
      , optparse-generic
      , proto3-suite
      , proto3-wire
      , text
      , random
      , vector
    other-modules:
      Echo
  else
    buildable: False
  default-language: Haskell2010
  ghc-options:      -Wall -g -threaded -rtsopts -with-rtsopts=-N -O2
  hs-source-dirs:   examples/echo/echo-hs
  main-is:          EchoClient.hs

test-suite tests
  build-depends:
      base >=4.8 && <5.0
    , grpc-haskell
    , bytestring ==0.10.*
    , unix
    , time
    , async
    , tasty >= 0.11
    , tasty-hunit >= 0.9
    , tasty-quickcheck >= 0.8.4
    , containers >=0.5 && <0.7
    , managed >= 1.0.0 && < 1.1
    , pipes >=4.1 && <=4.4
    , proto3-suite
    , transformers
    , safe
    , clock >=0.6.0 && <0.8.0
    , turtle >= 1.2.0
    , text
    , QuickCheck >=2.10 && <3.0
  other-modules:
    GeneratedTests
  default-language:     Haskell2010
  ghc-options:          -Wall -fwarn-incomplete-patterns -fno-warn-unused-do-bind -g -threaded -rtsopts
  hs-source-dirs:       tests
  main-is:              Properties.hs
  type:                 exitcode-stdio-1.0
  default-extensions:   CPP
  if flag(debug)
    CPP-Options: -DDEBUG
    CC-Options:  -DGRPC_HASKELL_DEBUG

benchmark bench
  type: exitcode-stdio-1.0
  build-depends:
      base >=4.8 && <5.0
    , grpc-haskell
    , async ==2.1.*
    , criterion ==1.1.*
    , proto3-suite
    , bytestring ==0.10.*
    , random >=1.0.0
  hs-source-dirs: bench
  main-is: Bench.hs
  ghc-options:      -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  if flag(debug)
    CPP-Options: -DDEBUG
    CC-Options:  -DGRPC_HASKELL_DEBUG
  default-language: Haskell2010
